# ai-math

./: .env  .env-local  .env.example  .gitignore  EXECUTABLE.md  Makefile  README.md  deep-agents.spec  helo.spec  main.py  pyproject.toml  review.md
.agent/.shared/ui-ux-pro-max/scripts/: design_system.py  search.py
.agent/scripts/: auto_preview.py  checklist.py  session_manager.py  verify_all.py
.agent/skills/database-design/scripts/: schema_validator.py
.agent/skills/frontend-design/scripts/: accessibility_checker.py  ux_audit.py
.agent/skills/i18n-localization/scripts/: i18n_checker.py
.agent/skills/lint-and-validate/scripts/: lint_runner.py
.agent/skills/mobile-design/scripts/: mobile_audit.py
.agent/skills/nextjs-react-expert/scripts/: convert_rules.py  react_performance_checker.py
.agent/skills/seo-fundamentals/scripts/: seo_checker.py
.agents/code-review/: SKILL.md
.agents/refactor/: SKILL.md
.devcontainer/: devcontainer.json  docker-compose.yml  test_tools.sh
plans/claude-code-cli-langchain/: implementation.md  plan.md
plans/mcp-integration-priority-system/: plan.md
plans/url-shortener-api/: implementation.md  plan.md
skills_builtin/: generator_skill.md  implementer_skill.md  planner_skill.md
stats/: 1-intro.md  2-amostragem.md
tests/: conftest.py  test_chat_ui.py  test_cli.py  test_cli_output.py  test_implementer_hitl.py  test_manual_roles.py  test_mcp_integration.py  test_model_factory.py  test_pipeline_flow.py  test_runtime.py  test_settings.py  test_skills.py  test_system_prompts.py  test_tracing.py
(+1 files in other folders)
