[project]
name = "workspace"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.4.11",
    "langchain>=1.2.12",
    "langchain-openrouter>=0.1.0",
    "langchain-ollama>=0.3.0",
    "langchain-litellm>=0.2.0",
    "pydantic-settings>=2.10.1",
    "prompt-toolkit>=3.0.52",
    "rich>=14.3.3",
    "typer>=0.16.1",
    "langchain-mcp-adapters>=0.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "mypy>=1.19.1",
    "nuitka>=4.0.5",
    "pyinstaller>=6.19.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-httpserver>=1.1.5",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 100
target-version = "py313"
cache-dir = ".ruff_cache"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.extend-per-file-ignores]
".agent/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_any_generics = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
